# FullStackCentral

./: README.md  app.py  ml_models.py  models.py  pyproject.toml  routes.py  text_analyzer.py  url_extractor.py
instance/: fakenews.db
static/css/: style.css
static/js/: main.js
templates/: base.html  history.html  index.html  results.html
